--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,10 @@
 
   <repositories>
       <repository>
+          <id>essentials-releases</id>
+          <url>https://repo.essentialsx.net/releases/</url>
+      </repository>
+      <repository>
           <id>papermc-repo</id>
           <url>https://repo.papermc.io/repository/maven-public/</url>
       </repository>
@@ -66,6 +70,18 @@
           <artifactId>paper-api</artifactId>
           <version>1.19.4-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>net.essentialsx</groupId>
+          <artifactId>EssentialsX</artifactId>
+          <version>2.19.0</version>
+          <scope>provided</scope>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.bstats</groupId>
+                  <artifactId>bstats-bukkit</artifactId>
+              </exclusion>
+          </exclusions>
       </dependency>
   </dependencies>
 </project>
