Back Command Added.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,10 @@ name: LDCore
 version: '${project.version}'
 main: me.litedeforged.ldcore.LDCore
 api-version: '1.19'
-depend: [Essentials]
+depend:
+  - Essentials
+  - StrikePractice
+commands:
+  back:
+    usage: '/back'
+
