Added New Command For Change Arena Reset Speed.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,5 @@ depend:
 commands:
   lastdeathlocation:
     permission: 'ldcore.practicepvp.commands.lastdeathlocation'
+  changerollbackspeed:
+    permission: 'ldcore.practicepvp.commands.changerollbackspeed'
