Registered ForceArenaRollback Command.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,5 @@ commands:
     permission: 'ldcore.practicepvp.commands.changerollbackspeed'
   partylimit:
     permission: 'ldcore.practicepvp.commands.partylimit'
+  forcearenarollback:
+    permission: 'ldcore.practicepvp.commands.forcearenarollback'
