--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,4 +13,6 @@ PlayerDeathLogger:
 #For /Back Command In FFA Crystal On PracticePvP.
 PracticeBackCommand:
   enable: true
+#PracticePvP System Environment.
+PracticePvPSystem:
 
