--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,6 +5,7 @@ api-version: '1.19'
 depend:
   - Essentials
   - StrikePractice
+  - ajParkour
 commands:
   lastdeathlocation:
     permission: 'ldcore.practicepvp.commands.lastdeathlocation'
@@ -14,3 +15,5 @@ commands:
     permission: 'ldcore.practicepvp.commands.partylimit'
   forcearenarollback:
     permission: 'ldcore.practicepvp.commands.forcearenarollback'
+  clientdetector:
+    permission: 'ldcore.game.commands.clientdetector'
