Command "/FF" Added.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -17,3 +17,5 @@ commands:
     permission: 'ldcore.practicepvp.commands.forcearenarollback'
   clientdetector:
     permission: 'ldcore.game.commands.clientdetector'
+  ff:
+    permission: 'ldcore.game.commands.ff'
